third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_combo_invalid.no-opt.exp

Diagnostics:
error: cannot read local `s` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:13:9
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- field `f` previously mutably borrowed here
13 │         *s;
   │         ^^ read attempted here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot read local `s` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:20:9
   │
19 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          -------- field `g` previously mutably borrowed here
   │                       │
   │                       field `f` previously mutably borrowed here
20 │         *s;
   │         ^^ read attempted here
21 │         *f;
   │         -- conflicting reference `f` used here

error: cannot read local `s` since it is mutably borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:27:9
   │
26 │         if (cond) x = copy s else x = other; // different error in v2 because copy of &mut
   │                       ------ previously mutably borrowed here
27 │         *s;
   │         ^^ read attempted here
28 │         *x;
   │         -- conflicting reference `x` used here
